# Simple_file_system

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  vfs  vfs.c  vfs.cbp
data/: dentry.txt  dentry_backup.txt  user_info_backup.txt
include/: bit_op.h  data_structures.h  dentry.h  inode.h  instruction_handle.h  super_block.h  trival_helper.h  user.h
src/: dentry.c  inode.c  instruction_handle.c  super_block.c  trival_helper.c  user.c  vfs.c
